fix: tabs overflow, section tab examples

--- a/example/src/global.css
+++ b/example/src/global.css
@@ -1,13 +1,13 @@
-@import url('https://fonts.googleapis.com/css?family=Roboto:300,300i,400,400i,500,500i,700,700i,900,900i&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Inter:wght@300;400;500;600;700;800&display=swap');
 
 * {
    box-sizing: border-box;
    margin: 0;
    padding: 0;
-   font-family: 'Roboto', sans-serif;
+   font-family: 'Inter', sans-serif;
 }
 
 body {
    padding: 16px;
-   font-family: 'Roboto', sans-serif;
+   font-family: 'Inter', sans-serif;
 }
